tests/base/parser/bad/exps/exp_t-at-spid-with.scilexp
let a = tfun 'A => True in
(* bad type *)
tfun 'B => @a b
